--- a/.github/workflows/publish-release-artifacts.yml
+++ b/.github/workflows/publish-release-artifacts.yml
@@ -16,7 +16,7 @@ jobs:
   publish-artifacts:
     name: Publish Release Artifacts
     runs-on: ubuntu-latest
-    if: github.repository_owner == 'ballerina-platform'
+#    if: github.repository_owner == 'ballerina-platform'
 
     steps:
       - name: Checkout Repository
