--- a/.github/workflows/publish-release-artifacts.yml
+++ b/.github/workflows/publish-release-artifacts.yml
@@ -33,8 +33,8 @@ jobs:
           TAGGED_VERSION=$RELEASE_VERSION
           LONG_VERSION=$VERSION-$CODE_NAME
 
-          PATCH_NUMBER=$(cut -d'.' -f3 <<< $VERSION)
-          DISPLAY_VERSION="$VERSION (Swan Lake Update $PATCH_NUMBER)"
+          UPDATE_NUMBER=$(cut -d'.' -f2 <<< $VERSION)
+          DISPLAY_VERSION="$VERSION (Swan Lake Update $UPDATE_NUMBER)"
 
           echo VERSION=$VERSION >> $GITHUB_ENV
           echo LONG_VERSION=$LONG_VERSION >> $GITHUB_ENV
