--- a/.github/workflows/publish-release-artifacts.yml
+++ b/.github/workflows/publish-release-artifacts.yml
@@ -43,126 +43,118 @@ jobs:
           echo "::set-output name=version::$RELEASE_VERSION"
           echo "::set-output name=taggedVersion::$TAGGED_VERSION"
 
-      - name: Echo variables
+      - name: Download artifacts
         run: |
-          echo "Tagged Version: $GIT_TAG"
-          echo "Version: $VERSION"
-          echo "Long Version: $LONG_VERSION"
-          echo "Display Version: $DISPLAY_VERSION"
+          baseUrl="https://github.com/ballerina-platform/ballerina-distribution/releases/download/v$GIT_TAG"
+          rm -rf $VERSION
+          mkdir $VERSION
+          cd $VERSION
 
+          echo "$baseUrl/ballerina-$LONG_VERSION.zip"
 
-#      - name: Download artifacts
-#        run: |
-#          baseUrl="https://github.com/ballerina-platform/ballerina-distribution/releases/download/v$GIT_TAG"
-#          rm -rf $VERSION
-#          mkdir $VERSION
-#          cd $VERSION
-#
-#          echo "$baseUrl/ballerina-$LONG_VERSION.zip"
-#
-#          wget "$baseUrl/ballerina-$LONG_VERSION.zip"
-#          wget "$baseUrl/ballerina-$VERSION.zip"
-#          wget "$baseUrl/ballerina-$LONG_VERSION-windows-x64.msi"
-#          wget "$baseUrl/ballerina-$LONG_VERSION-linux-x64.deb"
-#          wget "$baseUrl/ballerina-$LONG_VERSION-linux-x64.rpm"
-#          wget "$baseUrl/ballerina-$LONG_VERSION-macos-x64.pkg"
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.BALLERINA_BOT_TOKEN }}
-#          packageUser: ${{ secrets.BALLERINA_BOT_USERNAME }}
-#          packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
-#          devCentralToken: ${{ secrets.BALLERINA_DEV_CENTRAL_ACCESS_TOKEN }}
-#
-#      - name: Generate metadata json
-#        working-directory: ${{ steps.set-version.outputs.version }}
-#        run: |
-#          date=`date +%Y-%m-%d`
-#          winInstSize=`ls -lh ballerina-$LONG_VERSION-windows-x64.msi | cut -d " " -f5 | sed 's/M/mb/g'`
-#          linuxInstSize=`ls -lh ballerina-$LONG_VERSION-linux-x64.deb | cut -d " " -f5 | sed 's/M/mb/g'`
-#          rpmInstSize=`ls -lh ballerina-$LONG_VERSION-linux-x64.rpm | cut -d " " -f5 | sed 's/M/mb/g'`
-#          macInstSize=`ls -lh ballerina-$LONG_VERSION-macos-x64.pkg | cut -d " " -f5 | sed 's/M/mb/g'`
-#
-#          fileName=metadata.json
-#          echo "{" >> $fileName
-#          echo "	\"version\":\"$VERSION\"," >> $fileName
-#          echo "	\"short-version\":\"$VERSION\"," >> $fileName
-#          echo "	\"display-version\":\"$DISPLAY_VERSION\"," >> $fileName
-#          echo "	\"release-date\":\"$date\"," >> $fileName
-#          echo "	\"windows-installer\":\"ballerina-$LONG_VERSION-windows-x64.msi\"," >> $fileName
-#          echo "	\"windows-installer-size\":\"$winInstSize\"," >> $fileName
-#          echo "	\"linux-installer\":\"ballerina-$LONG_VERSION-linux-x64.deb\"," >> $fileName
-#          echo "	\"linux-installer-size\":\"$linuxInstSize\"," >> $fileName
-#          echo "	\"macos-installer\":\"ballerina-$LONG_VERSION-macos-x64.pkg\"," >> $fileName
-#          echo "	\"macos-installer-size\":\"$macInstSize\"," >> $fileName
-#          echo "	\"rpm-installer\":\"ballerina-$LONG_VERSION-linux-x64.rpm\"," >> $fileName
-#          echo "	\"rpm-installer-size\":\"$rpmInstSize\"," >> $fileName
-#          echo "	\"other-artefacts\":[  " >> $fileName
-#          echo "		\"ballerina-$LONG_VERSION.zip\"" >> $fileName
-#          echo " 	]", >> $fileName
-#          echo "	\"api-docs\":\"ballerina-api-docs-$VERSION.zip\"," >> $fileName
-#          echo "	\"release-notes\":\"ballerina-release-notes-$VERSION.md\"" >> $fileName
-#          echo "}" >> $fileName
-#
-#      - name: Archive metadata json
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: Metadata JSON
-#          path: ${{ steps.set-version.outputs.version }}/metadata.json
-#
-#      - name: Process docker
-#        id: process-docker
-#        run: |
-#          DOCKER_REPO='module-ballerina-docker'
-#          CURRENT_DATE=`date +%Y-%m-%d`
-#
-#          echo "::set-output name=dockerRepo::$DOCKER_REPO"
-#          echo "::set-output name=currentDate::$CURRENT_DATE"
-#
-#      - name: Checkout docker repo
-#        uses: actions/checkout@v2
-#        with:
-#          repository: ballerina-platform/module-ballerina-docker
-#          path: module-ballerina-docker
-#
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@v1
-#
-#      - name: Set up Docker Buildx
-#        id: buildx
-#        uses: docker/setup-buildx-action@v1
-#
-#      - name: Login to DockerHub
-#        uses: docker/login-action@v1
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
-#
-#      - name: Build and push docker image
-#        run: |
-#          dockerRepo=${{ steps.process-docker.outputs.dockerRepo }}
-#          currentDocker=${{ steps.process-docker.outputs.currentDocker }}
-#
-#          cp $VERSION/ballerina-$VERSION.zip ${dockerRepo}/base/docker/
-#          docker build --no-cache=true --squash --build-arg BALLERINA_DIST=ballerina-$VERSION.zip -t ballerina/ballerina:$GIT_TAG  ${dockerRepo}/base/docker/
-#          rm ${dockerRepo}/base/docker/ballerina-$VERSION.zip
-#          docker push ballerina/ballerina:$GIT_TAG
-#          docker rmi ballerina/ballerina:$GIT_TAG
-#          docker image prune -f
-#
-#      - name: Build and push dev container
-#        run: |
-#          dockerRepo=${{ steps.process-docker.outputs.dockerRepo }}
-#          currentDocker=${{ steps.process-docker.outputs.currentDocker }}
-#
-#          cp $VERSION/ballerina-$LONG_VERSION-linux-x64.deb ${dockerRepo}/base/devcontainer/
-#          docker build --no-cache=true --squash --build-arg BALLERINA_DIST=ballerina-$LONG_VERSION-linux-x64.deb -t ballerina/ballerina-devcontainer:$GIT_TAG ${dockerRepo}/base/devcontainer
-#          rm ${dockerRepo}/base/docker/ballerina-$LONG_VERSION-linux-x64.deb
-#          docker push ballerina/ballerina-devcontainer:$GIT_TAG
-#          docker rmi ballerina/ballerina-devcontainer:$GIT_TAG
-#          docker image prune -f
-#
-#      - name: Publish Artifacts
-#        run: |
-#          aws s3 cp $VERSION s3://dist-dev.ballerina.io/downloads/$VERSION --recursive
-#        env:
-#          s3_acc_id: ${{ secrets.S3_ID }}
-#          s3_acc_key: ${{ secrets.S3_KEY }}
+          wget "$baseUrl/ballerina-$LONG_VERSION.zip"
+          wget "$baseUrl/ballerina-$VERSION.zip"
+          wget "$baseUrl/ballerina-$LONG_VERSION-windows-x64.msi"
+          wget "$baseUrl/ballerina-$LONG_VERSION-linux-x64.deb"
+          wget "$baseUrl/ballerina-$LONG_VERSION-linux-x64.rpm"
+          wget "$baseUrl/ballerina-$LONG_VERSION-macos-x64.pkg"
+        env:
+          GITHUB_TOKEN: ${{ secrets.BALLERINA_BOT_TOKEN }}
+          packageUser: ${{ secrets.BALLERINA_BOT_USERNAME }}
+          packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
+          devCentralToken: ${{ secrets.BALLERINA_DEV_CENTRAL_ACCESS_TOKEN }}
+
+      - name: Generate metadata json
+        working-directory: ${{ steps.set-version.outputs.version }}
+        run: |
+          date=`date +%Y-%m-%d`
+          winInstSize=`ls -lh ballerina-$LONG_VERSION-windows-x64.msi | cut -d " " -f5 | sed 's/M/mb/g'`
+          linuxInstSize=`ls -lh ballerina-$LONG_VERSION-linux-x64.deb | cut -d " " -f5 | sed 's/M/mb/g'`
+          rpmInstSize=`ls -lh ballerina-$LONG_VERSION-linux-x64.rpm | cut -d " " -f5 | sed 's/M/mb/g'`
+          macInstSize=`ls -lh ballerina-$LONG_VERSION-macos-x64.pkg | cut -d " " -f5 | sed 's/M/mb/g'`
+
+          fileName=metadata.json
+          echo "{" >> $fileName
+          echo "	\"version\":\"$VERSION\"," >> $fileName
+          echo "	\"short-version\":\"$VERSION\"," >> $fileName
+          echo "	\"display-version\":\"$DISPLAY_VERSION\"," >> $fileName
+          echo "	\"release-date\":\"$date\"," >> $fileName
+          echo "	\"windows-installer\":\"ballerina-$LONG_VERSION-windows-x64.msi\"," >> $fileName
+          echo "	\"windows-installer-size\":\"$winInstSize\"," >> $fileName
+          echo "	\"linux-installer\":\"ballerina-$LONG_VERSION-linux-x64.deb\"," >> $fileName
+          echo "	\"linux-installer-size\":\"$linuxInstSize\"," >> $fileName
+          echo "	\"macos-installer\":\"ballerina-$LONG_VERSION-macos-x64.pkg\"," >> $fileName
+          echo "	\"macos-installer-size\":\"$macInstSize\"," >> $fileName
+          echo "	\"rpm-installer\":\"ballerina-$LONG_VERSION-linux-x64.rpm\"," >> $fileName
+          echo "	\"rpm-installer-size\":\"$rpmInstSize\"," >> $fileName
+          echo "	\"other-artefacts\":[  " >> $fileName
+          echo "		\"ballerina-$LONG_VERSION.zip\"" >> $fileName
+          echo " 	]", >> $fileName
+          echo "	\"api-docs\":\"ballerina-api-docs-$VERSION.zip\"," >> $fileName
+          echo "	\"release-notes\":\"ballerina-release-notes-$VERSION.md\"" >> $fileName
+          echo "}" >> $fileName
+
+      - name: Archive metadata json
+        uses: actions/upload-artifact@v2
+        with:
+          name: Metadata JSON
+          path: ${{ steps.set-version.outputs.version }}/metadata.json
+
+      - name: Process docker
+        id: process-docker
+        run: |
+          DOCKER_REPO='module-ballerina-docker'
+          CURRENT_DATE=`date +%Y-%m-%d`
+
+          echo "::set-output name=dockerRepo::$DOCKER_REPO"
+          echo "::set-output name=currentDate::$CURRENT_DATE"
+
+      - name: Checkout docker repo
+        uses: actions/checkout@v2
+        with:
+          repository: ballerina-platform/module-ballerina-docker
+          path: module-ballerina-docker
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push docker image
+        run: |
+          dockerRepo=${{ steps.process-docker.outputs.dockerRepo }}
+          currentDocker=${{ steps.process-docker.outputs.currentDocker }}
+
+          cp $VERSION/ballerina-$VERSION.zip ${dockerRepo}/base/docker/
+          docker build --no-cache=true --squash --build-arg BALLERINA_DIST=ballerina-$VERSION.zip -t ballerina/ballerina:$GIT_TAG  ${dockerRepo}/base/docker/
+          rm ${dockerRepo}/base/docker/ballerina-$VERSION.zip
+          docker push ballerina/ballerina:$GIT_TAG
+          docker rmi ballerina/ballerina:$GIT_TAG
+          docker image prune -f
+
+      - name: Build and push dev container
+        run: |
+          dockerRepo=${{ steps.process-docker.outputs.dockerRepo }}
+          currentDocker=${{ steps.process-docker.outputs.currentDocker }}
+
+          cp $VERSION/ballerina-$LONG_VERSION-linux-x64.deb ${dockerRepo}/base/devcontainer/
+          docker build --no-cache=true --squash --build-arg BALLERINA_DIST=ballerina-$LONG_VERSION-linux-x64.deb -t ballerina/ballerina-devcontainer:$GIT_TAG ${dockerRepo}/base/devcontainer
+          rm ${dockerRepo}/base/docker/ballerina-$LONG_VERSION-linux-x64.deb
+          docker push ballerina/ballerina-devcontainer:$GIT_TAG
+          docker rmi ballerina/ballerina-devcontainer:$GIT_TAG
+          docker image prune -f
+
+      - name: Publish Artifacts
+        run: |
+          aws s3 cp $VERSION s3://dist-dev.ballerina.io/downloads/$VERSION --recursive
+        env:
+          s3_acc_id: ${{ secrets.S3_ID }}
+          s3_acc_key: ${{ secrets.S3_KEY }}
