--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -9,7 +9,7 @@ jobs:
   ubuntu-build:
 
     runs-on: ubuntu-latest
-    if: github.repository_owner == 'ballerina-platform'
+#    if: github.repository_owner == 'ballerina-platform'
 
     steps:
       - name: Checkout Repository
