--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -114,20 +114,20 @@ jobs:
         run: ./../gradlew build --stacktrace -scan --console=plain --no-daemon -DballerinaInstalled=true
         env:
           TEST_MODE_ACTIVE: true
-      - name: Notify failure
-        if: ${{ failure() }}
-        run: |
-          curl -X POST \
-          'https://api.github.com/repos/ballerina-platform/ballerina-release/dispatches' \
-          -H 'Accept: application/vnd.github.v3+json' \
-          -H 'Authorization: Bearer ${{ secrets.BALLERINA_BOT_TOKEN }}' \
-          --data "{
-            \"event_type\": \"notify-build-failure\",
-            \"client_payload\": {
-              \"repoName\": \"ballerina-distribution\",
-              \"branch\": \"master\"
-            }
-          }"
+#      - name: Notify failure
+#        if: ${{ failure() }}
+#        run: |
+#          curl -X POST \
+#          'https://api.github.com/repos/ballerina-platform/ballerina-release/dispatches' \
+#          -H 'Accept: application/vnd.github.v3+json' \
+#          -H 'Authorization: Bearer ${{ secrets.BALLERINA_BOT_TOKEN }}' \
+#          --data "{
+#            \"event_type\": \"notify-build-failure\",
+#            \"client_payload\": {
+#              \"repoName\": \"ballerina-distribution\",
+#              \"branch\": \"master\"
+#            }
+#          }"
       - name: Checkout docker repo
         uses: actions/checkout@v2
         with:
