--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -9,7 +9,7 @@ jobs:
   ubuntu-build:
 
     runs-on: ubuntu-latest
-    if: github.repository_owner == 'ballerina-platform'
+#    if: github.repository_owner == 'ballerina-platform'
 
     steps:
       - name: Checkout Repository
@@ -38,7 +38,7 @@ jobs:
           devCentralToken: ${{ secrets.BALLERINA_DEV_CENTRAL_ACCESS_TOKEN }}
           ballerinaBotWorkflow: $ {{ secrets.BALLERINA_BOT_WORKFLOW }}
           TEST_MODE_ACTIVE: true
-        run: ./gradlew clean build --stacktrace --scan --console=plain --no-daemon --continue -x project-api-tests:test
+        run: ./gradlew clean build -x test --stacktrace --scan --console=plain --no-daemon --continue -x project-api-tests:test
       - name: Create linux-deb
         id: run_installers_deb
         run: |
@@ -114,20 +114,20 @@ jobs:
         run: ./../gradlew build --stacktrace -scan --console=plain --no-daemon -DballerinaInstalled=true
         env:
           TEST_MODE_ACTIVE: true
-      - name: Notify failure
-        if: ${{ failure() }}
-        run: |
-          curl -X POST \
-          'https://api.github.com/repos/ballerina-platform/ballerina-release/dispatches' \
-          -H 'Accept: application/vnd.github.v3+json' \
-          -H 'Authorization: Bearer ${{ secrets.BALLERINA_BOT_TOKEN }}' \
-          --data "{
-            \"event_type\": \"notify-build-failure\",
-            \"client_payload\": {
-              \"repoName\": \"ballerina-distribution\",
-              \"branch\": \"master\"
-            }
-          }"
+#      - name: Notify failure
+#        if: ${{ failure() }}
+#        run: |
+#          curl -X POST \
+#          'https://api.github.com/repos/ballerina-platform/ballerina-release/dispatches' \
+#          -H 'Accept: application/vnd.github.v3+json' \
+#          -H 'Authorization: Bearer ${{ secrets.BALLERINA_BOT_TOKEN }}' \
+#          --data "{
+#            \"event_type\": \"notify-build-failure\",
+#            \"client_payload\": {
+#              \"repoName\": \"ballerina-distribution\",
+#              \"branch\": \"master\"
+#            }
+#          }"
       - name: Checkout docker repo
         uses: actions/checkout@v2
         with:
@@ -206,7 +206,7 @@ jobs:
   project-api-tests:
 
     runs-on: ubuntu-latest
-    if: github.repository_owner == 'ballerina-platform'
+#    if: github.repository_owner == 'ballerina-platform'
 
     steps:
       - name: Checkout Repository
